--- a/style/style.css
+++ b/style/style.css
@@ -1,36 +1,39 @@
 body {
-    margin: 0;
-    box-sizing: border-box;
-    font-family: 'Open Sans', sans-serif;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Open Sans", sans-serif;
 }
 header {
-    height: 80px;
-    padding: 0px 3rem;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background: rgb(0, 0, 0);
-    box-shadow: 0px 1px 2px #343333;
-}
-a {
-    text-decoration: none;
-    color: white;
-}
-
-nav {
-    display: flex;
-    gap: 32px;
-    height: 100%;
+  height: 80px;
+  padding: 0px 3rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background: rgb(0, 0, 0);
+  box-shadow: 0px 1px 2px #343333;
 }
 .logo {
-    height: 100%;
+  height: 100%;
 }
+
+.navbar {
+  --bs-link-color: #fbfcf9;
+  --bs-link-hover-color: #8abb29;
+}
+/* nav {
+  display: flex;
+  gap: 32px;
+  height: 100%;
+}
+
 .menu-option {
-    font-size: 14px;
-    font-weight: 600;
-    display: flex;
-    align-items: center;
+  font-size: 14px;
+  font-weight: 600;
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  color: white;
 }
 .menu-option.active {
-    border-bottom: 2px solid rgb(255, 255, 255);   
-}
+  border-bottom: 2px solid rgb(255, 255, 255);
+} */
