--- a/style/style.css
+++ b/style/style.css
@@ -18,22 +18,60 @@ header {
 
 .navbar {
   --bs-link-color: #fbfcf9;
-  --bs-link-hover-color: #8abb29;
+  --bs-link-hover-color: #ff0000; /*Cambie el color de la Animacion a Rojo*/
 }
-/* nav {
+.present {
   display: flex;
+  justify-content: left;
+  margin: 9rem;
+  width: 100%;
+  display: flex;
+  max-width: 1100px;
   gap: 32px;
-  height: 100%;
+}
+.present-b {
+  display: flex;
+  
+}
+.present h1{
+  display: flex;
+  font-size: 4rem;
+  justify-content: left;
+  text-align: left;
+
+}
+.present h2 {
+  font-size: 4rem;
+}
+.present a {
+  color: blue;
+}
+.present-b img {
+  max-width: 100%; /* Asegura que la imagen no exceda el ancho del contenedor */
+  height: auto;
+  padding-left: 8rem;
+}
+.present-b .contenido {
+  padding: 15px;
+  text-align: center;
 }
 
-.menu-option {
-  font-size: 14px;
-  font-weight: 600;
-  display: flex;
-  align-items: center;
-  text-decoration: none;
-  color: white;
+.present p {
+  color: gray;
+  text-decoration: transparent;
 }
-.menu-option.active {
-  border-bottom: 2px solid rgb(255, 255, 255);
-} */
+.present .present-b a{
+  text-decoration: none;
+  display: inline-block;
+  justify-content: center;
+  align-items: center ;
+  padding: 16px;
+  color: #000000;
+  border: 1px solid #000000;
+  border-radius: 4px;
+  transition: all 400ms ease;
+}
+.present .present-b a:hover {
+  background: black ;
+  color: aliceblue;
+}
